作业配置修改